Change green to blue

--- a/pages/tutorials/important-terms.mdx
+++ b/pages/tutorials/important-terms.mdx
@@ -6,36 +6,36 @@ rendering.
 
 ## What is a mesh?
 
-A <span className="nx-font-bold nx-text-emerald-400">mesh</span> when talking about 3D models is simply the model itself.
-It's a series of <span className="nx-font-bold nx-text-emerald-400">vertices</span> (points in 3D space) that are connected by 
-<span className="nx-font-bold nx-text-emerald-400">edges</span> to form <span className="nx-font-bold nx-text-emerald-400">faces</span>.
+A <span className="nx-font-bold nx-text-blue-400">mesh</span> when talking about 3D models is simply the model itself.
+It's a series of <span className="nx-font-bold nx-text-blue-400">vertices</span> (points in 3D space) that are connected by 
+<span className="nx-font-bold nx-text-blue-400">edges</span> to form <span className="nx-font-bold nx-text-blue-400">faces</span>.
 
-<span className="nx-font-bold nx-text-emerald-400">Faces</span> are what we see when the scene is rendered.
+<span className="nx-font-bold nx-text-blue-400">Faces</span> are what we see when the scene is rendered.
 
 Models can be made up of 1 or more objects which themselves can be
 made up of 1 or more mesh.
 
-You may hear the term <span className="nx-font-bold nx-text-emerald-400">emissive mesh</span> in the GTA/FiveM community. This
+You may hear the term <span className="nx-font-bold nx-text-blue-400">emissive mesh</span> in the GTA/FiveM community. This
 simply refers to a mesh with an emissive material on it. Commonly
 used as police lights.
 
 ## What is a material/shader?
 
-<span className="nx-font-bold nx-text-emerald-400">Shaders</span> or <span className="nx-font-bold nx-text-emerald-400">materials</span> (depending on the context) are what give us control
+<span className="nx-font-bold nx-text-blue-400">Shaders</span> or <span className="nx-font-bold nx-text-blue-400">materials</span> (depending on the context) are what give us control
 over how the mesh will look when rendered. We can change the color of
 shaders and many other factors including emissive strength and specular
 values to simulate different materials.
 
-In GTA/FiveM shaders use the <span className="nx-font-bold nx-text-emerald-400">specular workflow</span> which includes a few
+In GTA/FiveM shaders use the <span className="nx-font-bold nx-text-blue-400">specular workflow</span> which includes a few
 channels including Diffuse (color) and Specular (glossiness).
 
 By default shaders will affect every pixel on the mesh the same way.
-We can use <span className="nx-font-bold nx-text-emerald-400">textures</span> to address different parts of the mesh with different
+We can use <span className="nx-font-bold nx-text-blue-400">textures</span> to address different parts of the mesh with different
 values in each channel.
 
 ## What is a texture?
 
-A <span className="nx-font-bold nx-text-emerald-400">texture</span> is simply an image file.
+A <span className="nx-font-bold nx-text-blue-400">texture</span> is simply an image file.
 With a fancy name in the context of 3D.
 
 We plug these images into a shader to make it output different values at different spots 
@@ -44,10 +44,10 @@ on the mesh. Without textures shaders will apply the same value to the whole mes
 
 ## TLDR
 
-The <span className="nx-font-bold nx-text-emerald-400">mesh</span> forms the shape of the 
-3D object, the <span className="nx-font-bold nx-text-emerald-400">shader</span> makes the 
+The <span className="nx-font-bold nx-text-blue-400">mesh</span> forms the shape of the 
+3D object, the <span className="nx-font-bold nx-text-blue-400">shader</span> makes the 
 mesh look different based on inputted values, 
-<span className="nx-font-bold nx-text-emerald-400">textures</span> add detail to shaders 
+<span className="nx-font-bold nx-text-blue-400">textures</span> add detail to shaders 
 by inputtingdifferent vales at different spots on the mesh.
 
 
