--- a/pages/ulc/in-game-usage.mdx
+++ b/pages/ulc/in-game-usage.mdx
@@ -7,17 +7,19 @@ description: Learn how to use ULC in-game as a player
 
 ![](https://i.imgur.com/DwIvplS.png)
 
-ULC includes an intuitive menu with easy-to-use controls to change various settings. To access the menu use the ``/ulc`` command!
+ULC includes an intuitive menu with easy-to-use controls to change various settings. To access the menu use the `/ulc` command!
 
 ![](https://i.imgur.com/Y1PgIZG.png)
 
 ## Commands
 
-| Command     | Effect                                                   |
-| ----------- | -------------------------------------------------------- |
-| `/ulc`      | Displays the settings menu and enables dragging the HUD. |
-| `/ulcReset` | Wipes all user-preferences and sets default values.      |
+| Command     | Effect                                                                                                       |
+| ----------- | ------------------------------------------------------------------------------------------------------------ |
+| `/ulc`      | Displays the settings menu and enables dragging the HUD.                                                     |
+| `/ulcReset` | Wipes all user-preferences and sets default values.                                                          |
+| `/blackout` | Toggles blackout mode. Turns of headligths and taillights & disables emergency lights and some ULC features. |
 
 ## Key-binds
 
-Default key-bindings are ``NUM 1`` - ``NUM 9``. You can change these in your game settings.
+Default key-bindings are `NUM 1` - `NUM 9`.
+You can change these in your game settings.
