work toward ulc 1.8.0

--- a/pages/ulc/configuration/brake-extras.mdx
+++ b/pages/ulc/configuration/brake-extras.mdx
@@ -1,6 +1,14 @@
+import Video from "../../../components/Video";
+
 # Brake Extras
 
+## Overview
+
 Brake extras allow you to enable and disable extras while the vehicle is braking. Pretty simple!
+
+## Real World Example
+
+<Video url="https://www.youtube.com/watch?v=soUtxrP_FPk" />
 
 ## How to Create Brake Patterns
 
@@ -9,40 +17,38 @@ The primary use for this feature is adding functional brake lights as extras. Fo
 Sometimes you may want to instead create an alternate pattern for your lightbar or other lighting features that will be enabled while braking. Generally the usage for brake patterns is to create a faster pattern while braking to grab more attention.
 You have the option of controlling what speed this effect will be enabled at. For example, you may want your alternative pattern to only be enabled if the vehicle brakes while at high speeds. You can configure this behavior by adjusting the `speedThreshold` value to a higher number.
 
-<!-- brake extras are not state aware -->
-
 ## Brake Pattern Vehicle Config
 
-### ``useBrakes``
+### `useBrakes`
 
 Whether the effect should be enabled.
 
-### ``speedThreshold``
+### `speedThreshold`
 
 This value determines above what speed should the effect occur.
 
-For example, if ``speedThreshold`` is set to ``45``, the brake extras will only be enabled if the player starts braking while going above 45 miles per hour (or kph depending on your configuration).
+For example, if `speedThreshold` is set to `45`, the brake extras will only be enabled if the player starts braking while going above 45 miles per hour (or kph depending on your configuration).
 
 When the value is 3, "realistic brake mode" will be enabled, which will cause the brake lights to stay on while stopped. You can read more about this below.
 
-### ``brakeExtras``
+### `brakeExtras`
 
 A table with all extras that should be enabled while the braking effect is activated.
 
-### ``disableExtras``
+### `disableExtras`
 
 A table with all extras that should be disabled while the braking effect is activated.
 
 ## Real Brake Light Behavior
 
-You can already get partially realistic brake light behavior by setting the ``speedThreshold`` value to 3, but this only effects your extras and has a somewhat limited realism.
+You can already get partially realistic brake light behavior by setting the `speedThreshold` value to 3, but this only effects your extras and has a somewhat limited realism.
 
-We recommend using the real-brake-lights script alongside ULC to get the best brake light behavior. The ``real-brake-lights`` script has it's own logic for realistically handling the brake lights on vehicles so that they stay on while stopped as well as other realistic automations.
-When ``real-brake-lights`` is detected in your resources by ULC, ULC will hand over control of the brake extras to the resource, allowing for more realistic behavior on not only the vehicle lights, but your extras.
+We recommend using the real-brake-lights script alongside ULC to get the best brake light behavior. The `real-brake-lights` script has it's own logic for realistically handling the brake lights on vehicles so that they stay on while stopped as well as other realistic automations.
+When `real-brake-lights` is detected in your resources by ULC, ULC will hand over control of the brake extras to the resource, allowing for more realistic behavior on not only the vehicle lights, but your extras.
 
-<!-- On it's own, the real-brake-lights resource only manages the actual brake lights on your vehicle. -->
+{/* <!-- On it's own, the real-brake-lights resource only manages the actual brake lights on your vehicle. --> */}
 
-## ``ulc.lua`` Config Example
+## `ulc.lua` Config Example
 
 ```lua
 brakeConfig = {
