--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,12 +4,18 @@
   openGraph: ../public/banner.jpg
 ---
 
-import Image from 'next/image';
-import Video from '../components/Video.jsx';
-import { Callout } from 'nextra-theme-docs'
+import Image from "next/image";
+import Video from "../components/Video.jsx";
+import { Callout } from "nextra-theme-docs";
 
 <div className="nx-aspect-[4/1] nx-w-full nx-rounded-lg nx-overflow-hidden nx-flex nx-justify-center nx-items-center nx-my-4">
-  <Image src="/banner.png" alt="Banner" width="1000" height="300" className="nx-object-cover"/>
+  <Image
+    src="/banner.png"
+    alt="Banner"
+    width="1000"
+    height="300"
+    className="nx-object-cover"
+  />
 </div>
 
 # Home
@@ -17,26 +23,31 @@ import { Callout } from 'nextra-theme-docs'
 Welcome to our GTA V and FiveM Documentation for vehicle developers!
 
 ## Project Goals
+
 - Provide a comprehensive, easy-to-use, and easy-to-understand documentation for vehicle developers
 - Maintain an open-source set of vehicle documents in a single location that can be contributed to by anyone
 
-<Callout  type="info">
-  This project focuses on commentary and advice geared toward FiveM developers rather than being an exhaustive resource on every value in the data files.<br /> <br />
-  If you're looking for a full list of all values and variables see [the GTAMods Wiki.](https://gtamods.com/wiki/Main\_Page)
+<Callout type="info">
+  This project focuses on commentary and advice geared toward FiveM developers
+  rather than being an exhaustive resource on every value in the data files.
+  <br /> <br />
+  If you're looking for a full list of all values and variables see [the GTAMods
+  Wiki.](https://gtamods.com/wiki/Main\_Page)
 </Callout>
 
 Have questions? [Join our Discord!](https://discord.gg/zH3k624aSv)
 
 ## You Can Contribute!
+
 This project is open-source and we welcome contributions from anyone! If you have a suggestion or a change you'd like to make, you can do one of the following:
 
-1. (Easy) [Create an issue](https://github.com/dwnstr/docs/issues/new?labels=Suggestion\&template=suggestion.md\&title=%5BSuggestion%5D) with a suggested change or addition.
+1. (Easy) [Create an issue](https://github.com/dwnstr/docs/issues/new?labels=Suggestion&template=suggestion.md&title=%5BSuggestion%5D) with a suggested change or addition.
 2. (Medium) Click the pencil icon on [any file in the tree](https://github.com/dwnstr/docs/edit/main/pages/index.mdx) to make changes in browser.
-2. (Advanced) Fork the repo and make your changes, then create a pull request for review.
+3. (Advanced) Fork the repo and make your changes, then create a pull request for review.
 
 ### Contribution Guidelines:
 
-* Keep things formatted nicely (learn [Markdown](https://www.markdownguide.org/basic-syntax/) if you don't know it already)
-* Maintain good grammar
-* Make a new heading if you need to, but only if it's something that is not covered at all yet
-* Feel free to copy-paste things from other places, but ensure you credit the original author, and provide a link to the original content
+- Keep things formatted nicely (learn [Markdown](https://www.markdownguide.org/basic-syntax/) if you don't know it already)
+- Maintain good grammar
+- Make a new heading if you need to, but only if it's something that is not covered at all yet
+- Feel free to copy-paste things from other places, but ensure you credit the original author, and provide a link to the original content
