--- a/pages/ulc/integrations/real-brake-lights.mdx
+++ b/pages/ulc/integrations/real-brake-lights.mdx
@@ -28,7 +28,7 @@ ULC is able to hook into Real Brake Lights, and uses it's brake logic to determi
 the [brake extras](/ulc/configuration/brake-extras) feature. This means that all of the benefits of Real Brake Lights are available
 to ULC users.
 
-Real Brake Lights also listens for ULC [/blackout command](/ulc/in-game-usage) events and will keep the brakelights disabled while
+Real Brake Lights also listens for ULC [/blackout command](/ulc/in-game-usage#commands) events and will keep the brakelights disabled while
 blackout is active.
 
 ## How to setup
