--- a/pages/ulc/configuration/stages.mdx
+++ b/pages/ulc/configuration/stages.mdx
@@ -24,12 +24,13 @@ buttons = {
 },
 ```
 
-With this setup, the linked and off extras are almost enough to make a proper stage system. However, if you were to
-press 3 to turn on stage 3 (activating stage 1 and 2 because of the `linkedExtras`) then press 2 to downgrade to stage 2, it would actually turn off all three stages since
+With this setup, the linked and off extras are almost enough to make a proper stage system. Pressing the stage 3 button would enable both 1 and 2, however, if you were to
+press 3 then press 2 to downgrade to stage 2, it would actually turn off all three stages since
 stage 2 was already enabled.
 
 The default behavior of buttons is to disable if it's already enabled. If a button is defined as a stage it will instead check the current stage
-and adjust it's state accordingly.
+and if it's a different stage the button will instead remain active and the extras would be set accordingly. Only if the stage is the same as the
+current stage will all of the stages be disabled.
 
 <Callout type="info">
   Defining only one button as a stage will have no effect!
