--- a/pages/ulc/configuration/stages.mdx
+++ b/pages/ulc/configuration/stages.mdx
@@ -55,3 +55,10 @@ For example, if your have a button like the one below the value you should place
 `{ label = "Stage 1", key = 4, extra = 12 ... }`
 
 </Callout>
+
+## Controls
+
+The default keybindings for stage controls are below.
+``NUM 0`` - Cycle Stage
+``NUM +`` - Upgrade Stage
+``NUM -`` - Downgrade Stage
