--- a/pages/ulc/configuration/stages.mdx
+++ b/pages/ulc/configuration/stages.mdx
@@ -59,6 +59,6 @@ For example, if your have a button like the one below the value you should place
 ## Controls
 
 The default keybindings for stage controls are below.
-``NUM 0`` - Cycle Stage
-``NUM +`` - Upgrade Stage
-``NUM -`` - Downgrade Stage
+- ``NUM 0`` - Cycle Stage
+- ``NUM +`` - Upgrade Stage
+- ``NUM -`` - Downgrade Stage
